[package]
name = "counter"
version = "0.0.0"
authors = ["Schell Scivally <efsubenovex@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
console_log.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
wasm-bindgen.workspace = true

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { workspace = true, optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.2", optional = true }

mogwai = { path = "../../crates/mogwai", version = "0.7" }

[dependencies.web-sys]
workspace = true
# Add more web-sys API's as you need them
features = [
  "HtmlInputElement",
]

[dev-dependencies]
wasm-bindgen-test.workspace = true
