[lib]
crate-type = ["cdylib", "rlib"]

[package]
name = "sandbox"
version = "0.1.0"
authors = ["Schell Scivally <efsubenovex@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_log = "0.1.2"
console_error_panic_hook = "0.1.6"
wasm-bindgen = "0.2"
futures = "0.3"
wasm-bindgen-futures = "0.4"
log = "0.4"

[dependencies.mogwai]
path = "../../mogwai"

[dependencies.web-sys]
version = "0.3.31"
features = [
  "Node",
  "NodeList",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
]