[lib]
crate-type = ["cdylib", "rlib"]

[package]
name = "sandbox"
version = "0.1.0"
authors = ["Schell Scivally <efsubenovex@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_log = "^0.1"
console_error_panic_hook = "^0.1"
futures = "^0.3"
log = "^0.4"
mogwai-hydrator = { path = "../../crates/mogwai-hydrator", version = "^0.2" }
wasm-bindgen = "^0.2"
wasm-bindgen-futures = "^0.4"

[dependencies.mogwai]
path = "../../crates/mogwai"
version = "^0.5"

[dependencies.web-sys]
version = "^0.3"
features = [
  "Node",
  "NodeList",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
]