[package]
name = "spa-routing"
version = "0.0.0"
authors = ["Schell Scivally <efsubenovex@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_log.workspace = true
log.workspace = true

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook.workspace = true

mogwai = { path = "../../crates/mogwai" }

[dependencies.web-sys]
workspace = true
# Add more web-sys APIs as you need them
features = [
  "HtmlInputElement",
  "HashChangeEvent",
]
