[package]
name = "svg"
version = "0.0.0"
authors = ["Schell Scivally <efsubenovex@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_log.workspace = true
log.workspace = true
mogwai = { path = "../../crates/mogwai" }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook.workspace = true

[dependencies.web-sys]
workspace = true
# Add more web-sys API's as you need them
features = [
  "HtmlInputElement",
]

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
