[package]
name = "todomvc"
version = "0.1.0"
authors = ["Schell Scivally <efsubenovex@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
console_log.workspace = true
futures.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { workspace = true, optional = true }

mogwai = { path = "../../crates/mogwai" }

[dependencies.web-sys]
workspace = true
features = [
  "HashChangeEvent",
  "HtmlInputElement",
  "KeyboardEvent",
  "Location",
  "Storage"
]

[dev-dependencies]
wasm-bindgen-test = "0.3.0"
